Data Science Tasks

--- a/2024/Projects/Pet-Projects/Data Science/Система рекомандации/Система рекомендации(на анализе исходного текста).md
+++ b/2024/Projects/Pet-Projects/Data Science/Система рекомандации/Система рекомендации(на анализе исходного текста).md
@@ -181,4 +181,4 @@ recommend_books('Data Science. Наука о данных с нуля | Грас
 	Книга 4: Python, Django и Bootstrap для начинающих. | Постолит Анатолий В.
 	Книга 5: Python для детей. Самоучитель по программированию | Бриггс Джейсон
 
-Мы видем, что книга Структуры данных и алгоритмы в Java | Лафоре Роберт система рекомендации выставила на 1 место. Изучаем основы Python. Практический курс для дата-аналитиков данная книга присуствует в топе. Oracle для профессионалов. Архитектура, методи... - работа с БД для Data Science тоже важно и нужно. Python, Django и Bootstrap для начинающих и Python для детей. Самоучитель по программирова.. тоже присуствуют в рекомендации, это связанно с частой повторения слов, который присуствуют в Data Science. Наука о данных с нуля Грас Джоэл Грас Джоэл | Грас Джоэл. Но всё же, 3 книги система правильно выставила в топе. Конечно, над этой системой нужно работать и работать, но она спокойно может посоветовать похожую книгу.
+Мы видим, что книга Структуры данных и алгоритмы в Java | Лафоре Роберт система рекомендации выставила на 1 место. Изучаем основы Python. Практический курс для дата-аналитиков данная книга присуствует в топе. Oracle для профессионалов. Архитектура, методи... - работа с БД для Data Science тоже важно и нужно. Python, Django и Bootstrap для начинающих и Python для детей. Самоучитель по программирова.. тоже присуствуют в рекомендации, это связанно с частой повторения слов, который присуствуют в Data Science. Наука о данных с нуля Грас Джоэл Грас Джоэл | Грас Джоэл. Но всё же, 3 книги система правильно выставила в топе. Конечно, над этой системой нужно работать и работать, но она спокойно может посоветовать похожую книгу.
