--- a/Results/2024/Цели.md
+++ b/Results/2024/Цели.md
@@ -1,5 +1,5 @@
 
 -  Изучить основы направления Data Science
 -  Создать сайт портфолио
--  Освоить фреймворки: Flask, PyTorch
+-  Освоить фреймворки: Flask, Keras, TensorFlow
 -  Изучить языки программирования: Java, R, Ruby
