--- a/2024/Education/Data Science/Тренеровочные задания и решения/Задание 3 - Линейная регрессия/Линейная регрессия.md
+++ b/2024/Education/Data Science/Тренеровочные задания и решения/Задание 3 - Линейная регрессия/Линейная регрессия.md
@@ -12,3 +12,11 @@
 $$
 Y=b0​+b1​X+ϵ
 $$
+
+Модель линейной регрессии представляет собой математическую формулу, которая позволяет строить прогнозы. **Построить регрессию** – это значит подобрать такую линию (точнее, функцию), которая как можно точнее описывает данные.
+
+Прежде чем подогнать линейную модель, необходимо проверить, наличие взаимосвязи между интересующими переменными.
+
+**Интерполяция** — способ выбрать из семейства функций ту, которая проходит через заданные точки.
+**Аппроксимация** — способ выбрать из семейства «простых» функций приближение для «сложной» функции на отрезке, при этом ошибка не должна превышать определенного предела
+**Регрессия** — способ выбрать из семейства функций ту, которая минимизирует функцию потерь.
