--- a/Results/2024/Цели.md
+++ b/Results/2024/Цели.md
@@ -1,5 +1,9 @@
+Основыные цели:
 
 -  Изучить основы направления Data Science
 -  Создать сайт портфолио
 -  Освоить фреймворки: Flask, Keras, TensorFlow
+
+Второстепенные цели:
 -  Изучить языки программирования: Java, R, Ruby
+- Создать простой Перцептрон
